--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/StatusBar.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/StatusBar.xaml
@@ -6,21 +6,6 @@
              xmlns:local="clr-namespace:WindowsPlatform.MainToolbar"
              xmlns:platform="clr-namespace:WindowsPlatform"
              mc:Ignorable="d" Background="{Binding Path=(platform:Styles.StatusBarBackgroundBrush), Mode=OneWay}">
-    <UserControl.Resources>
-        <Style x:Key="FlatProgressBar" TargetType="{x:Type ProgressBar}">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ProgressBar">
-                        <Border BorderBrush="{Binding Path=(platform:Styles.StatusBarProgressBorderBrush), Mode=OneWay}" BorderThickness="0" CornerRadius="0" Padding="0">
-                            <Grid x:Name="PART_Track">
-                                <Rectangle x:Name="PART_Indicator" HorizontalAlignment="Left" Fill="{Binding Path=(platform:Styles.StatusBarProgressBackgroundBrush), Mode=OneWay}" />
-                            </Grid>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </UserControl.Resources>
     <UserControl.Style>
         <Style TargetType="{x:Type local:StatusBarControl}">
         	<Setter Property="StatusTextBrush" Value="{Binding Path=(platform:Styles.StatusBarTextBrush), Mode=OneWay}" />
@@ -39,8 +24,10 @@
     </UserControl.Style>
     <Grid VerticalAlignment="Center" Height="26" Width="350" MinWidth="220" MaxWidth="700" UseLayoutRounding="True">
         <Grid>
-            <ProgressBar Minimum="0" Maximum="1" x:Name="ProgressBar" Style="{StaticResource FlatProgressBar}"/>
-
+            <ProgressBar Minimum="0" Maximum="1" x:Name="ProgressBar"
+            		Background="Transparent"
+            		BorderBrush="{Binding Path=(platform:Styles.StatusBarProgressBorderBrush), Mode=OneWay}"
+            		Foreground="{Binding Path=(platform:Styles.StatusBarProgressBackgroundBrush), Mode=OneWay}"/>
         </Grid>
         <Grid Background="Transparent" >
             <Grid.ColumnDefinitions>
