--- a/main/src/addins/WindowsPlatform/WindowsPlatform/Styles.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/Styles.xaml
@@ -577,10 +577,10 @@
                                        Margin="1,2"
                                        RadiusX="2"
                                        RadiusY="2"/>
-                            <Rectangle HorizontalAlignment="Left"
+                            <!--<Rectangle HorizontalAlignment="Left"
                                        Width="1"
                                        Margin="29,2,0,2"
-                                       Fill="{Binding Path=(platform:Styles.MenuSeparatorBrush), Mode=OneWay}"/>
+                                       Fill="{Binding Path=(platform:Styles.MenuSeparatorBrush), Mode=OneWay}"/>-->
                             <ItemsPresenter Name="ItemsPresenter" Margin="{TemplateBinding Padding}"
                                             KeyboardNavigation.DirectionalNavigation="Cycle"
                                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
