[Windows] Fix icon button pressed state

--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/IconButton.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/IconButton.xaml
@@ -13,6 +13,8 @@
                 </StackPanel>
             </ControlTemplate>
         </Button.Template>
-        <Image x:Name="RunIcon" Source="{Binding CurrentImage}" UseLayoutRounding="True" />
+        <Image x:Name="RunIcon" Source="{Binding CurrentImage}" UseLayoutRounding="True"
+    		MouseLeftButtonDown="OnMouseLeftButtonDown"
+    		MouseLeftButtonUp="OnMouseLeftButtonUp" />
     </Button>
 </UserControl>
